Fix back button

--- a/pages/app-privacy-policy_EN.html
+++ b/pages/app-privacy-policy_EN.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main class="container">
-        <a href="/">Back</a>
+        <a href="/FinGoL">Back</a>
         <hgroup>
             <h1>FinGoL Junior App - Privacy Policy</h1>
             <h2>
