--- a/pages/chatbot-privacy-policy.html
+++ b/pages/chatbot-privacy-policy.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main class="container">
-        <a href="/">Back</a>
+        <a href="/FinGoL">Back</a>
         <hgroup>
             <h1>FinGOL Privacy Policy</h1>
             <h2>
